# prosodic

./: .directinput.txt  .gitignore  .gitmodules  .nojekyll  .style.yapf  CLAUDE.md  MANIFEST.in  README  README.ipynb  README.md  README_prosodic.txt  __init__.py  _version.py  architecture.html  codecov.yml  config.py  config.txt  config_backup.py  cookbook.py  design.html  dev-requirements.txt  example.html  getting-started.html  index.html  install.html  prosodic.py  pyproject.toml  quickstart.html  remaining_issues.txt  requirements.txt  rmbadlines.pl  robots.txt  search.json  setup.cfg  setup.py  sitemap.xml  test.py  test.txt  tutorial.html  walkthrough.html  (+2 more)
.claude/: settings.json
.github/: nonreleases.yml
corpora/: .directinput.txt  lear-c.txt
croll/: croll.py
data/: walker5.csv
deploy/: nginx-prosodic.conf  prosodic.service  setup.sh
deployment/: README.md  nginx.conf  supervisor.conf
desktop/: README.md  build.sh
docs/: _quarto.yml  architecture.qmd  example.qmd  getting-started.ipynb  getting-started.qmd  index.qmd  install.qmd  quickstart.ipynb  quickstart.qmd  tutorial.qmd  webapp.qmd
experiments/: alliteration.py  clash.py  qclash.py  qphrase.py
lib/: ._Text.py  ._Word.py  ._entity.py  Corpus.py  DataFrame.py  Dictionary.py  Line.py  MaxEnt.py  MaxEnt2.py  Meter.py  MeterConstraint.py  MeterPosition.py  MeterSlot.py  Onset.py  Parse.py  Phoneme.py  Rime.py  Sentence.py  Stanza.py  Syllable.py  SyllableBody.py  Text.py  Word.py  WordToken.py  entity.py  ipa.py  lexconvert.py  moochart-0.1b1-nc.js  pickler.py  tools.py  txt2db.py
meters/: __init__.py  default_english.py  iambic_pentameter.py  iambic_pentameter3.py  kiparskyhanson_hopkins.py  kiparskyhanson_shakespeare.py  litlab.py  meter_arto.py  prose_rhythm_iambic.py  prose_rhythm_iambic_inviolable.py  prose_rhythm_iambic_violable.py
metricaltree/: README.md  __init__.py  deptree.py  get-deps.sh  metricaltree.py  test.py
notebooks/: .dev_newprosodic4.ipynb.py  dev_espeaking.ipynb  dev_espeaking2.ipynb  dev_espeaking3.ipynb  dev_fastparsing.ipynb  dev_fastparsing2.ipynb  dev_fastparsing3.ipynb  dev_graphambiguity.ipynb  dev_newprosodic.ipynb  dev_newprosodic0.ipynb  dev_newprosodic10.ipynb  dev_newprosodic11.ipynb  dev_newprosodic2.ipynb  dev_newprosodic3.ipynb  dev_newprosodic4.ipynb  dev_newprosodic5.ipynb  dev_newprosodic6.ipynb  dev_newprosodic7.ipynb  dev_newprosodic8.ipynb  dev_newprosodic9.ipynb  dev_newprosodic_speeds.ipynb  dev_parselist2.ipynb  dev_parselist3.ipynb  dev_puncs.ipynb  metrical_parsing.ipynb  phrases.ipynb  profile_parsing.py  profile_parsing.py.lprof  test
profile/: profile_parsing.py
prosodic/: Coda.py  Corpus.py  Dictionary.py  Line.py  Meter.py  Parse.py  Sentence.py  Syllable.py  Text.py  __init__.py  _version.py  batch.py  cli.py  client.py  config.py  constraints.py  entity.py  ents.py  imports.py  la-suf-parsed.txt~  la-three-syll.txt~  langs.py  lexconvert.py  lines.py  lists.py  meter.py  parsing.py  phonemes.py  profiling.py  prosodic.py  sents.py  stanzas.py  syllables.py  texts.py  tokenizers.py  tools.py  utils.py  words.py
reference/: index.html  lines.Line.html  prosodic.html  texts.Text.__init__.html  texts.Text.html
scripts/: build_readme.py  rime_eval.py
syllabiphon/: syllabify.py
tests/: test_analysis.py  (+15 more)
(+777 files in other folders)
