[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosodic"
description = "Prosodic 2: a metrical-phonological parser, written in Python. For English and Finnish, with flexible language support."
authors = [
    {name = "Ryan Heuser", email = "ryan.heuser@princeton.edu"},
]
readme = "README.md"
license = {text = "Apache License, Version 2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/quadrismegistus/prosodic/tree/develop"
"Project Home" = "https://prosodic.stanford.edu"
"Bug Tracker" = "https://github.com/quadrismegistus/prosodic/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "_version.__version__"}

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[project.optional-dependencies]
dev = [
    "black>=22.10.0",
    "pre-commit>=2.20.0",
    "tox",
    "sphinx",
    "twine",
    "wheel",
    "pytest-cov",
    "pytest>=7.2",
    "selenium",
    "pytest-cov",
    "pytest>=7.2",
]
all = [
    "black>=22.10.0",
    "pre-commit>=2.20.0",
    "tox",
    "sphinx",
    "twine",
    "wheel",
    "pytest-cov",
    "pytest>=7.2",
]

[project.scripts]
prosodic = "prosodic.cli:cli"