[metadata]
name = prosodic
version = attr: prosodic._version.__version__
author = Ryan Heuser
author_email = ryan.heuser@princeton.edu
description = Prosodic 2: a metrical-phonological parser, written in Python. For English and Finnish, with flexible language support.
long_description = file: README.md
license = Apache License, Version 2.0
long_description_content_type = text/markdown
url = https://github.com/quadrismegistus/prosodic/tree/develop
project_urls =
    Project Home = https://prosodic.stanford.edu
    Bug Tracker = https://github.com/quadrismegistus/prosodic/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >=3.8
install_requires = 
    ftfy
    langdetect
    pandas
    loguru
    syllabiphon @ git+https://github.com/dmort27/syllabiphon
    sqlitedict
    gruut-ipa
    numpy
    multiset
    nltk
    phonemizer
    quart
    orjson
    ordered-set
    click
    editdistance @ git+https://github.com/roy-ht/editdistance
    Werkzeug==2.2.2
include_package_data = True

[options.extras_require]
all =
    %(dev)s
    %(test)s
dev =
    black>=22.10.0
    pre-commit>=2.20.0
    tox
    sphinx
    twine
    wheel
    pytest-cov
    pytest>=7.2
test =
    pytest-cov
    pytest>=7.2

[options.entry_points]
console_scripts =
    prosodic = prosodic.web:cli
